rename to listApp

--- a/examples/starters/list/index.html
+++ b/examples/starters/list/index.html
@@ -27,7 +27,7 @@
     'nav-router' attribute updates the nav-bar title and animations as you navigate
     'animation' attribute sets which type of animations to use
   -->
-  <body ng-app="listExample" nav-router animation="slide-left-right-ios7">
+  <body ng-app="listApp" nav-router animation="slide-left-right-ios7">
 
     <!-- The nav bar that will be updated as we navigate -->
     <nav-bar 
