--- a/js/ext/angular/test/list.html
+++ b/js/ext/angular/test/list.html
@@ -113,6 +113,11 @@
             Individual item directive and overrides list attrs with item attributes
           </item>
 
+          <!-- shows how a divider could be included-->
+          <div class="item item-divider">
+            Me Divider, just plain ol' HTML nested in the list directive.
+          </div>
+
           <!-- shows that the item directive does not need attributes and can get values from the list attributes -->
           <item ng-repeat="item in items" 
                 item="item">
@@ -122,8 +127,21 @@
 
           <!-- shows how a divider could be included-->
           <div class="item item-divider">
-            Me Divider, just plain ol' HTML nested in the list directive
+            Below is NOT using the item directive, but just nested HTML
           </div>
+
+          <!-- shows how very simple lists don't need the item directive at all -->
+
+          <div class="item item-thumbnail-left">
+            <img src="http://pbs.twimg.com/profile_images/2913427048/ed94193baa04ace85aa8a8bf4bf6c5a9.jpeg">
+            <h2>Nic Cage</h2>
+            <p>I am not a demon. I am a lizard, a shark, a heat-seeking panther. I want to be Bob Denver on acid playing the accordion.</p>
+          </div>
+
+          <a class="item item-icon-left" href="{{ item.url }}" ng-repeat="item in urlItems">
+            <i class="icon {{ item.icon }}"></i>
+            {{ item.text }}
+          </a>
 
         </list>
       </div>
@@ -146,7 +164,7 @@
         // Build Mock Data
         function buildMockData() {
           $scope.items = [];
-          for(var i = 0; i < 4; i++) {
+          for(var i = 0; i < 3; i++) {
             $scope.items.push({
               text: i
             });
@@ -238,6 +256,11 @@
             text: 'Submit',
             onClick: function() { alert('SUBMIT!') }
           }
+        ];
+
+        $scope.urlItems = [
+          { text: 'Biography', icon: 'ion-person', url: 'http://en.wikipedia.org/wiki/Nicolas_Cage' },
+          { text: 'Fan Club', icon: 'ion-star', url: 'http://cagealot.com/' }
         ];
 
       });
